--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.5.0"
+    "styled-components": "^6.1.12",
+    "three": "^0.166.1",
+    "tsparticles": "^3.5.0",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
