--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.24.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.12",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.166.1",
     "tsparticles": "^3.5.0",
     "vaul": "^0.9.1"
