--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@vercel/speed-insights": "^1.0.12",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
     "react": "^18.3.1",
