--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,1 @@
-{
-  "version": 2,
-  "routes": [
-    {
-      "src": "/service",
-      "dest": "/Service"
-    },
-    {
-      "src": "/projects",
-      "dest": "/Projects"
-    },
-    {
-      "src": "/contactme",
-      "dest": "/ContactMe"
-    },
-    {
-      "src": "/about",
-      "dest": "/About"
-    },
-    {
-      "src": "/.*",
-      "dest": "/"
-    }
-  ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
