--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@vercel/speed-insights": "^1.0.12",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^3.0.0",
     "three": "^0.166.1",
     "tsparticles": "^3.5.0",
     "vaul": "^0.9.1"
