--- a/src/assets/desktop.ini
+++ b/src/assets/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2024-10-02 235529.png=@Screenshot 2024-10-02 235529.png,0
+Screenshot 2025-04-10 175939.png=@Screenshot 2025-04-10 175939.png,0
