--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.13",
+    "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
