feat: add MarkdownRenderer component and integrate it into ChatBot; update experiences layout and styles; enhance scroll button positioning

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.24.1",
     "react-tsparticles": "^2.12.2",
+    "rehype-highlight": "^7.0.2",
     "styled-components": "^6.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.0.0",
